<resources>
    <string name="app_name">FishCare</string>
    <string name="home">Home</string>
    <string name="recode">Recode</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>

    <!-- HomeFragment-->
    <string name="display_image">Display Name</string>
    <string name="home_alarm_button">ADD ALARM</string>
    <string name="home_record_button">ADD RECORD</string>
    <string name="record_number_limit">Limit on number of photos</string>

    <!-- NotificationFragment-->
    <string name="alarm_list">Alarm list</string>
    <string name="notification_channel_name">aquarium task</string>
    <string name="alarm_start">Alarm has been set</string>
    <string name="no_data_str">NoData</string>

    <!-- notification -->
    <string name="notification_title">Remaining task</string>
    <string name="notification_message">There are incomplete tasks</string>

    <!-- AddTaskActivity -->
    <string name="add_task_title">Add task</string>
    <string name="input_name">Task name</string>
    <string name="change_water">ex. change water</string>
    <string name="input_date">Date</string>
    <string name="def_format_date">yyyy / MM / dd</string>
    <string name="input_time">Time</string>
    <string name="def_format_time">HH : mm</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_period">ex.7</string>
    <string name="repeat_days_str">days</string>
    <string name="save">SAVE</string>
    <string name="character_limit">Limit on the number of characters</string>
    <string name="repeat_period_limit">Repeat period must be 365 or less</string>
    <string name="request_code_limit">Limit on alarm number. Delete another alarm</string>
    <!-- notificationRow -->
    <string name="task_state_Icon">taskStateIcon</string>
    <string name="default_str">default</string>
    <string name="next">Next</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="def_time">XX:XX</string>
    <string name="def_date">MM/dd</string>
    <string name="prev">Prev</string>
    <string name="no_repeat">No data of repeat</string>
    <string name="delete">DELETE</string>

    <!-- RecordFragment -->
    <string name="recode_date"><u>MM/dd/yyyy</u></string>
    <string name="photo_list">Photo list</string>
    <string name="record_image">record image</string>
</resources>